--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,4 @@ pydub>=0.25.1
 uuid>=1.30
 openai>=1.3.5  # Optional for OpenAI TTS
 email-validator>=2.0.0  # Required for validating email fields
+resend
