fix: update vercel

--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
         },
         {
             "src": "/(.*)",
-            "dest": "/app/api/routes/*.py"
+            "dest": "app/main.py"
         }
     ]
 }
